# voice-clonner

./: .gitignore  README.md  app.py  config.py  modals.py  model_downloader.py  pyproject.toml  run.bat  theme.py
.github/workflows/: build.yml
chatterbox/: generate.py  pyproject.toml
tts_download/TTS-0.22.0/: PKG-INFO  setup.cfg  setup.py
tts_download/TTS-0.22.0/TTS.egg-info/: requires.txt
