[project]
name = "xtts-gui"
version = "1.0.0"
requires-python = ">=3.9,<3.10"

dependencies = [
    "numpy==1.22.0",
    "TTS>=0.22.0",
    "torch>=2.2,<2.3",
    "torchaudio>=2.2,<2.3",
    "PyQt5==5.15.11",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "matplotlib>=3.5",
    "transformers>=4.3.0,<4.40.0",
    "blis>=0.7.8,<1.0.0",
    "spacy>=3.0.0,<3.8.0",
    "setuptools<=80.8.0",
    "edge-tts>=6.1.12",
    "av>=10.0",
    "cutlet>=0.4",
    "fugashi[unidic-lite]>=1.3",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = []

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.uv.sources]
torch      = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]
TTS        = { path = "tts_download/TTS-0.22.0" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
