[project]
name = "chatterbox-indo"
version = "1.0.0"
requires-python = ">=3.11,<3.12"

dependencies = [
    "chatterbox-tts>=0.1.1",
    "safetensors>=0.4.0",
    "soundfile>=0.12",
    "huggingface_hub>=0.20",
    "torchaudio>=2.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
